--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,5 +1,5 @@
 .header__link {
-  color: rgba(255, 255, 255, 1);
+  color: #fff;
   font-family: "Inter";
   font-size: 24px;
   font-style: normal;
@@ -8,6 +8,20 @@
   text-decoration: none;
 }
 
+.header__link:hover {
+  opacity: 0.5;
+}
+
 .header__link_active {
   text-decoration: underline;
+}
+
+@media screen and (max-width: 767px) {
+  .header__link {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 20px;
+  }
 }
