--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,26 +5,26 @@
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
-  padding: 28px 48px 0;
+  padding-top: 28px;
 }
 
 @media screen and (max-width: 1279px) {
   .header {
-    max-width: 928px;
+    width: 928px;
   }
 }
 
 
 @media screen and (max-width: 1023px) {
   .header {
-    max-width: 720px;
-    padding: 28px 24px 0
+    width: 720px;
+    padding-top: 28px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .header {
-    max-width: 288px;
-    padding: 16px 16px 0
+    width: 288px;
+    padding-top: 16px;
   }
 }
