--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,4 +1,4 @@
-.section-subtitle {
+.lead__subtitle {
   margin: 0 auto;
   font-family: "Inter";
   font-style: normal;
@@ -14,7 +14,7 @@
 
 
 @media all and (max-width: 767px) {
-  .section-subtitle {
+  .lead__subtitle {
     padding-top: 16px;
     height: 40px;
     max-width: 288px;
