--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,28 +1,24 @@
 .lead {
-  padding-top: 56px;
   margin: 0 auto;
   max-width: 984px;
+  width: 100%;
   box-sizing: border-box;
 }
 
 @media screen and (max-width: 1279px) {
   .lead {
-    padding-top: 48px;
-    width: 928px;
+    max-width: 928px;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .lead {
-    padding-top: 48px;
-    width: 768px;
+    max-width: 768px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .lead {
-    padding-top: 48px;
     max-width: 320px;
-    width: 100%;
   }
 }
