--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,10 +1,10 @@
 .page {
   background-color: #2a2c2f;
-  box-sizing: border-box;
   color: #fff;
-  margin: 0 auto;
+  font-family: "Inter", "Helvetica Neue", Arial, sans-serif;
   max-width: 1280px;
   width: 100%;
+  margin: 0 auto;
 }
 
 @media screen and (max-width: 1279px) {
