--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -9,19 +9,21 @@
 @media screen and (max-width: 1279px) {
   .place {
     column-gap: 32px;
+    max-width: 928px;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .place {
     column-gap: 28px;
+    max-width: 720px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .place {
+    max-width: 288px;
     flex-direction: column;
     row-gap: 32px;
-    padding-left: 16px;
   }
 }
