--- a/blocks/website/website.css
+++ b/blocks/website/website.css
@@ -8,3 +8,10 @@
   margin: 0;
   height: 46px;
 }
+
+@media screen and (max-width: 767px) {
+  .website {
+    max-width: 288px;
+    align-self: flex-start;
+  }  
+}
