--- a/blocks/place/__description/place__description.css
+++ b/blocks/place/__description/place__description.css
@@ -1,4 +1,4 @@
-.places__description {
+.place__description {
   margin: 0;
   position: relative;
   display: flex;
@@ -8,19 +8,19 @@
   padding-bottom: 80px;
 }
 
-.places__description:last-child {
+.place__description:last-child {
   padding-bottom: 0;
 }
 
 @media screen and (max-width: 1279px) {
-  .places__description {
+  .place__description {
     max-width: 928px;
     column-gap: 32px;
   }
 }
 
 @media screen and (max-width: 1023px) {
-  .places__description {
+  .place__description {
     max-width: 720px;
     column-gap: 28px;
     padding-bottom: 73px;
@@ -28,7 +28,7 @@
 }
 
 @media screen and (max-width: 767px) {
-  .places__description {
+  .place__description {
     flex-direction: column;
     max-width: 320px;
     padding-bottom: 50px;
