--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  height: 740px;
+  min-height: 740px;
   justify-content: center;
   max-width: 1184px;
   text-decoration: none;
@@ -28,20 +28,20 @@
 @media screen and (max-width: 1279px) {
   .cover__link {
     max-width: 1024px;
-    height: 640px;
+    min-height: 640px;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .cover__link {
     max-width: 768px;
-    height: 480px;
+    min-height: 480px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .cover__link {
     max-width: 320px;
-    height: 200px;
+    min-height: 200px;
   }
 }
