--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,18 +1,16 @@
 .lead__title {
   margin: 0 auto;
-  font-family: "Inter";
   font-style: normal;
   font-weight: 900;
   font-size: 96px;
   line-height: 100px;
   text-align: center;
   max-width: 720px;
-  height: 200px;
   width: 100%;
   padding-top: 56px;
 }
 
-@media screen and (max-width: 1279) {
+@media screen and (max-width: 1279px) {
   .lead__title {
     padding-top: 48px;
   }
@@ -23,6 +21,5 @@
     font-size: 40px;
     line-height: 44px;
     max-width: 288px;
-    height: 88px;
   }
 }
