--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,4 +1,4 @@
-.places__image {
+.place__image {
   max-width: 460px;
   width: 100%;
   height: 460px;
@@ -9,25 +9,23 @@
 }
 
 @media screen and (max-width: 1279px) {
-  .places__image {
+  .place__image {
     max-width: 440px;
     height: 440px;
   }
 }
 
 @media screen and (max-width: 1023px) {
-  .places__image {
+  .place__image {
     max-width: 340px;
     height: 340px;
   }
 }
 
 @media screen and (max-width: 767px) {
-  .places__image {
+  .place__image {
     max-width: 320px;
-    width: 100%;
     height: 320px;
     margin-top: 32px;
-    margin-bottom: 32px;
   }
 }
