--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -1,29 +1,35 @@
-.places__paragraph {
+.place__paragraphs {
+  display: flex;
+  flex-direction: column;
+  row-gap: 26px;
   max-width: 484px;
   width: 100%;
   margin: 0;
-  font-family: "Inter";
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 163%;
+  padding-top: 48px;
 }
 
 @media screen and (max-width: 1279px) {
-  .places__paragraph{
+  .place__paragraphs{
     max-width: 456px;
+    row-gap: 27px;
   }
 }
 
 @media screen and (max-width: 1023px) {
-  .places__paragraph{
+  .place__paragraphs{
     font-size: 16px;
     max-width: 352px;
+    row-gap: 25px;
   }
 }
 
 @media screen and (max-width: 767px) {
-  .places__paragraph{
+  .place__paragraphs{
+    padding-top: 32px;
     padding-left: 16px;
     max-width: 288px;
   }
