--- a/blocks/website/__link/website__link.css
+++ b/blocks/website/__link/website__link.css
@@ -1,11 +1,11 @@
 .website__link {
   margin: 0;
   color: rgba(255, 255, 255, 1);
-  font-family: "Inter";
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
+  align-self: flex-start;
 }
 
 .website__link:hover {
