--- a/blocks/website/__url-heading/website__url-heading.css
+++ b/blocks/website/__url-heading/website__url-heading.css
@@ -2,10 +2,10 @@
   margin: 0;
   color: rgba(170, 170, 170, 1);
   text-decoration: none;
-  font-family: "Inter";
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
   line-height: 12px;
   letter-spacing: 2px;
+  text-transform: uppercase;
 }
